[gd_scene load_steps=3 format=3 uid="uid://dlexdrbwocdlj"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_ahxkd"]
[ext_resource type="Script" path="res://scripts/camera_shake.gd" id="2_hym4a"]

[node name="game" type="Node2D"]
script = ExtResource("1_ahxkd")

[node name="UI" type="CanvasLayer" parent="."]

[node name="UI_Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerOneRoundsText" type="RichTextLabel" parent="UI/UI_Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 265.0
offset_top = 269.0
grow_horizontal = 2
grow_vertical = 2
text = "Player 1 Rounds Won:"

[node name="PlayerTwoRoundsText" type="RichTextLabel" parent="UI/UI_Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 473.0
offset_top = 128.0
offset_right = 208.0
offset_bottom = -141.0
grow_horizontal = 2
grow_vertical = 2
text = "Player 2 Rounds Won:"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(575, 327)
script = ExtResource("2_hym4a")
